# ai-tel

./: .gitignore  README.md  ai_text_generator.py  pyproject.toml  setup.md  test_example.py
.github/workflows/: ci.yml
conversation_logs/: conversation_20260319_162507.txt  conversation_20260319_162632.txt  conversation_20260319_162928.txt  conversation_20260319_163138.txt  conversation_20260319_163200.txt  conversation_20260319_163229.txt
knowledge_base/: knowledge.txt
scripts/: dev.ps1
src/ai_tel/: __init__.py  cli.py  gui.py  openai_reply.py  openai_speech.py  openai_tts.py  processor.py  tts_gui.py  voice_reply_gui.py  windows_speech.py
tests/: test_cli.py  test_gui.py  test_openai_reply.py  test_openai_speech.py  test_openai_tts.py  test_processor.py  test_voice_reply_gui.py
transcription_logs/: transcript_20260319_163648.txt  transcript_20260319_171822.txt
