[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-tel"
version = "0.1.0"
description = "A small Python project for language detection, text analysis, text generation, speech transcription, and text-to-speech."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langdetect==1.0.9",
  "numpy>=1.26",
  "openai>=1.68.0",
  "sounddevice>=0.4.7",
  "textblob==0.17.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
ai-tel = "ai_tel.cli:main"
ai-tel-gui = "ai_tel.gui:main"
ai-tel-tts-gui = "ai_tel.tts_gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
norecursedirs = [
  ".git",
  ".pytest_cache",
  ".venv",
  "__pycache__",
  "*.egg-info",
  "pytest-cache-files-*",
]